--- a/sql-cli/Cargo.toml
+++ b/sql-cli/Cargo.toml
@@ -67,3 +67,9 @@ tui-textarea = "0.7"
 
 [dev-dependencies]
 tempfile = "3.8"
+
+[profile.release]
+opt-level = "z"     # Optimize for size
+lto = true          # Enable Link Time Optimization
+codegen-units = 1   # Reduce parallel codegen for better optimization
+strip = true        # Strip symbols
