dont raise errors as warnings yet on tests

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -57,7 +57,7 @@ jobs:
     
     - name: Run clippy
       working-directory: ./sql-cli
-      run: cargo clippy -- -D warnings
+      run: cargo clippy -- -W warnings
     
     - name: Check formatting
       working-directory: ./sql-cli
