--- a/.github/workflows/release-manual.yml
+++ b/.github/workflows/release-manual.yml
@@ -21,6 +21,10 @@ on:
 env:
   CARGO_TERM_COLOR: always
 
+permissions:
+  contents: write
+  pull-requests: write
+
 jobs:
   prepare-release:
     runs-on: ubuntu-latest
@@ -87,7 +91,12 @@ jobs:
     - name: Create tag
       run: |
         git tag "v${{ steps.version.outputs.new_version }}"
-        git push origin "v${{ steps.version.outputs.new_version }}"
+    
+    - name: Push tag
+      uses: ad-m/github-push-action@master
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        tags: true
 
   build-release:
     needs: prepare-release
