--- a/.github/workflows/release-manual.yml
+++ b/.github/workflows/release-manual.yml
@@ -137,7 +137,14 @@ jobs:
     
     - name: Build Release
       working-directory: ./sql-cli
-      run: cargo build --release --target ${{ matrix.target }}
+      run: |
+        # Add metadata to help with false positives
+        cargo build --release --target ${{ matrix.target }}
+        
+        # Strip debug symbols on Windows to reduce false positives
+        if [[ "${{ matrix.os }}" == "windows-latest" ]]; then
+          strip target/${{ matrix.target }}/release/sql-cli.exe || true
+        fi
     
     - name: Create archive (Unix)
       if: matrix.os != 'windows-latest'
