--- a/.gitignore
+++ b/.gitignore
@@ -40,8 +40,5 @@ customers.csv
 # VHS and demos
 sql-cli/demos/vhs
 sql-cli/demos/ttyd
-sql-cli/demos/*-optimized.gif
-sql-cli/demos/*-small.gif
-# Keep the main demo GIFs but ignore optimized versions
-# Uncomment below to ignore all generated GIFs during development
+# Keep demo GIFs in the repo for README
 # sql-cli/demos/*.gif
