chore: add large trade data files to gitignore
- Exclude data/trades_*.json from tracking (except trades.json)
- These large test files should be generated locally using generate_trades.py
- Keeps repo size manageable

--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,7 @@ sql-cli/demos/vhs
 sql-cli/demos/ttyd
 # Keep demo GIFs in the repo for README
 # sql-cli/demos/*.gif
+
+# Large test data files
+data/trades_*.json
+!data/trades.json
