feat: add comprehensive debugging support for TUI
- Added VS Code debug configurations with multiple launch modes:
  * API mode debugging
  * CSV file debugging (with sample data)
  * JSON file debugging
  * Modern TUI mode debugging
  * Simple mode debugging
- Added debug profile in Cargo.toml with symbols and no optimization
- Added debug.sh script with debugging instructions
- Added debug_gdb.sh script for GDB debugging
- Added VS Code settings for optimal Rust development
- Debug binary includes full symbols for stepping through code

Usage:
  - VS Code: Open project and press F5 to debug
  - CLI: ./debug.sh for instructions
  - GDB: ./debug_gdb.sh to start GDB session

--- a/sql-cli/Cargo.toml
+++ b/sql-cli/Cargo.toml
@@ -117,6 +117,12 @@ tracing-subscriber = { version = "0.3", features = ["env-filter", "time", "local
 [dev-dependencies]
 tempfile = "3.8"
 
+[profile.dev]
+opt-level = 0       # No optimization for debugging
+debug = true        # Include debug symbols
+debug-assertions = true
+overflow-checks = true
+
 [profile.release]
 opt-level = "z"     # Optimize for size
 lto = true          # Enable Link Time Optimization
