feat: add comprehensive build system with keyboard shortcuts
- Enhanced tasks.json with emoji-labeled build tasks:
  * 🔨 Build Debug (default build task)
  * 🚀 Build Release
  * ✅ Check (fast compilation check)
  * 🔍 Clippy (linting)
  * 🧪 Test All
  * 🎨 Format Code
  * ▶️ Run tasks (API mode, CSV mode, Release mode)
  * 🐛 Setup Debug Environment

- Added keybindings.json with convenient shortcuts:
  * Ctrl+Shift+B: Build Debug (default)
  * Ctrl+Shift+R: Build Release
  * Ctrl+Shift+T: Test All
  * Ctrl+Shift+C: Check
  * Ctrl+Shift+L: Clippy
  * Ctrl+Shift+F: Format
  * Ctrl+F5: Run API mode
  * Ctrl+Shift+F5: Run with CSV

- Enhanced settings.json with RUST_BACKTRACE and debug logging
- Fixed buffer method call bug in set_show_row_numbers

Usage:
  - Press Ctrl+Shift+B to build debug version
  - Press Ctrl+Shift+P then type task name to run specific tasks
  - Use F5 for debugging, Ctrl+F5 for running

--- a/sql-cli/.vscode/settings.json
+++ b/sql-cli/.vscode/settings.json
@@ -13,6 +13,7 @@
     "rust-analyzer.lens.references": true,
     "rust-analyzer.lens.methodReferences": true,
     "rust-analyzer.lens.enumVariantReferences": true,
+    "rust-analyzer.cargo.features": "all",
     "files.watcherExclude": {
         "**/target/**": true
     },
@@ -24,5 +25,17 @@
     "[rust]": {
         "editor.defaultFormatter": "rust-lang.rust-analyzer",
         "editor.formatOnSave": true
+    },
+    "terminal.integrated.env.linux": {
+        "RUST_BACKTRACE": "1"
+    },
+    "terminal.integrated.env.osx": {
+        "RUST_BACKTRACE": "1"
+    },
+    "terminal.integrated.env.windows": {
+        "RUST_BACKTRACE": "1"
+    },
+    "rust-analyzer.server.extraEnv": {
+        "RUST_LOG": "debug"
     }
 }
