fix: update manual release workflow to use correct sql-cli subdirectory paths
- Fix Cargo.toml path references to sql-cli/Cargo.toml
- Add working-directory for cargo build command
- Update release artifact path to sql-cli/target/release/sql-cli
- Resolves 'Cargo.toml: No such file or directory' error

--- a/.github/workflows/release-manual.yml
+++ b/.github/workflows/release-manual.yml
@@ -42,7 +42,7 @@ jobs:
         id: version
         run: |
           # Get current version from Cargo.toml
-          CURRENT_VERSION=$(grep "^version" Cargo.toml | sed 's/version = "\(.*\)"/\1/')
+          CURRENT_VERSION=$(grep "^version" sql-cli/Cargo.toml | sed 's/version = "\(.*\)"/\1/')
           echo "Current version: $CURRENT_VERSION"
           
           # Parse version components
@@ -69,9 +69,10 @@ jobs:
 
       - name: Update version in Cargo.toml
         run: |
-          sed -i "s/^version = .*/version = \"${{ steps.version.outputs.new_version }}\"/" Cargo.toml
+          sed -i "s/^version = .*/version = \"${{ steps.version.outputs.new_version }}\"/" sql-cli/Cargo.toml
           
       - name: Build release binary
+        working-directory: ./sql-cli
         run: |
           cargo build --release
           
@@ -132,7 +133,7 @@ jobs:
         run: |
           git config user.name "GitHub Actions"
           git config user.email "actions@github.com"
-          git add Cargo.toml
+          git add sql-cli/Cargo.toml
           git commit -m "chore: bump version to v${{ steps.version.outputs.new_version }}"
           git push
 
@@ -150,6 +151,6 @@ jobs:
           draft: false
           prerelease: false
           files: |
-            target/release/sql-cli
+            sql-cli/target/release/sql-cli
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
