--- a/.github/workflows/release-manual.yml
+++ b/.github/workflows/release-manual.yml
@@ -243,4 +243,96 @@ jobs:
           cat RELEASE_NOTES.md >> $GITHUB_OUTPUT
           echo "EOF" >> $GITHUB_OUTPUT
 
-      # ... rest of the workflow remains the same ...
+      - name: Commit version bump
+        run: |
+          git config user.name "GitHub Actions"
+          git config user.email "actions@github.com"
+          git add sql-cli/Cargo.toml
+          git commit -m "chore: bump version to v${{ steps.version.outputs.new_version }}"
+          git push
+
+      - name: Create and push tag
+        run: |
+          git tag -a "v${{ steps.version.outputs.new_version }}" -m "Release v${{ steps.version.outputs.new_version }}"
+          git push origin "v${{ steps.version.outputs.new_version }}"
+
+  build:
+    name: Build Release Binaries
+    needs: prepare-release
+    strategy:
+      matrix:
+        include:
+          - os: ubuntu-latest
+            target: x86_64-unknown-linux-gnu
+            artifact: sql-cli-linux-x64
+          - os: windows-latest
+            target: x86_64-pc-windows-msvc
+            artifact: sql-cli-windows-x64
+          - os: macos-latest
+            target: x86_64-apple-darwin
+            artifact: sql-cli-macos-x64
+          - os: macos-latest
+            target: aarch64-apple-darwin
+            artifact: sql-cli-macos-arm64
+    
+    runs-on: ${{ matrix.os }}
+    
+    steps:
+    - uses: actions/checkout@v4
+      with:
+        ref: v${{ needs.prepare-release.outputs.new_version }}
+    
+    - name: Set up Rust
+      uses: actions-rs/toolchain@v1
+      with:
+        toolchain: stable
+        target: ${{ matrix.target }}
+        override: true
+    
+    - name: Build Release
+      working-directory: ./sql-cli
+      run: cargo build --release --target ${{ matrix.target }}
+    
+    - name: Create artifact directory
+      run: mkdir -p artifacts
+    
+    - name: Copy binary (Unix)
+      if: matrix.os != 'windows-latest'
+      run: cp sql-cli/target/${{ matrix.target }}/release/sql-cli artifacts/${{ matrix.artifact }}
+    
+    - name: Copy binary (Windows)
+      if: matrix.os == 'windows-latest'
+      run: cp sql-cli/target/${{ matrix.target }}/release/sql-cli.exe artifacts/${{ matrix.artifact }}.exe
+    
+    - name: Upload artifact
+      uses: actions/upload-artifact@v4
+      with:
+        name: ${{ matrix.artifact }}
+        path: artifacts/*
+  
+  release:
+    name: Create GitHub Release
+    needs: [prepare-release, build]
+    runs-on: ubuntu-latest
+    
+    steps:
+    - uses: actions/checkout@v4
+      with:
+        ref: v${{ needs.prepare-release.outputs.new_version }}
+    
+    - name: Download all artifacts
+      uses: actions/download-artifact@v4
+      with:
+        path: artifacts
+    
+    - name: Create GitHub Release
+      uses: softprops/action-gh-release@v1
+      with:
+        tag_name: v${{ needs.prepare-release.outputs.new_version }}
+        name: v${{ needs.prepare-release.outputs.new_version }}
+        body: ${{ needs.prepare-release.outputs.release_notes }}
+        files: artifacts/**/*
+        draft: false
+        prerelease: false
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
